57: Added fix on white space menu item

--- a/themes/profumo-labo/_dev/css/theme/layout/_header.scss
+++ b/themes/profumo-labo/_dev/css/theme/layout/_header.scss
@@ -239,6 +239,7 @@
         a{
           font-size: $font-size-sm !important;
           font-weight: normal;
+          white-space: normal;
 
           &:after,
           &:before{
